# TinyEvent

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TinyEvent.cpp  TinyEvent.h
src/: CMakeLists.txt  TinyEvent.cpp  TinyEvent.h
tests/: CMakeLists.txt  tests.cpp
